# Boyko_backend_2

./: .env  .gitignore  full_ensemble_code.ipynb  pyproject.toml
data/datasets/: additional_functions.py  gen_dataset.py  gen_test_data.py  gen_test_dataset.py  generate_with_events.py  generate_without_events.py
edamonia_backend/: corpus - Copy.csv  main.py  path_configs.py  predict.py  question.csv  some.py  test.csv  test_output.csv
edamonia_backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
edamonia_backend/catboost_info/learn/: events.out.tfevents
edamonia_backend/data/csv_files/: bm25_index.pkl  combined_cleaned.csv  combined_cleaned_embeddings.npy  combined_cleaned_embeddings.tsv  tfidf_index.pkl
edamonia_backend/data/csv_files/cleaned_csv/: CatBoost_chunks.csv  DecisionTree_chunks.csv  Gourment Paradise_chunks.csv  LightGBM_chunks.csv  XGBoost_chunks.csv  corpus_cleaned.csv  html_bot_chunks.csv  Вишнева лавка_chunks.csv  лаб№4_Якимів Анастасії_ШІ-32_chunks.csv
edamonia_backend/data/csv_files/combined/: combined_cleaned.csv  combined_primary.csv
edamonia_backend/data/csv_files/primary_csv/: Gourment Paradise_chunks.csv  corpus_primary.csv  data_without_events_chunks.csv  (+3 more)
edamonia_backend/data/primary/: CatBoost.csv  DecisionTree.csv  Gourment Paradise.txt  XGBoost.csv  data_without_events.csv  html_bot.txt  test_tuning2_iter2.xlsx  Вишнева лавка.txt
edamonia_backend/logic/emb_models/: emd.py
edamonia_backend/logic/preprocessing/: chunking.py  preprocess.py  preprocess_data.py  stop_words.py
edamonia_backend/logic/ranking_by_frequency/: bm25lus.py  tf_idf.py
edamonia_backend/logic/responce_by_llm/: llm.py
edamonia_backend/logic/train/: preprocess_data.py
prediction_results/: CatBoost_results.csv  CatBoost_test_predictions.csv  DecisionTree_results.csv  DecisionTree_test_predictions.csv  LightGBM_predict.csv  LightGBM_results.csv  LightGBM_test_predictions.csv  XGBoost_predict.csv  XGBoost_results.csv  XGBoost_test_predictions.csv
(+16 files in other folders)
