[tool.poetry]
name = "edamonia-backend"
version = "0.1.0"
description = ""
authors = ["Marik <57559857+BuildDear@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pandas = "^2.2.3"
torch = "^2.5.1"
ftfy = "^6.3.1"
tqdm = "^4.67.0"
emoji = "^2.14.0"
python-multipart = "^0.0.19"
accelerate = "^0.26.0"
protobuf = "^5.29.1"
sentencepiece = "^0.2.0"
catboost = "^1.2.7"
lightgbm = "^4.5.0"
xgboost = "^2.1.3"
scikit-learn = "~1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
