[tool.poetry]
name = "edamonia-backend"
version = "0.1.0"
description = ""
authors = ["Marik <57559857+BuildDear@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pandas = "^2.2.3"
torch = "^2.5.1"
ftfy = "^6.3.1"
tqdm = "^4.67.0"
emoji = "^2.14.0"
python-multipart = "^0.0.19"
accelerate = "^0.26.0"
protobuf = "^5.29.1"
sentencepiece = "^0.2.0"
catboost = "^1.2.7"
lightgbm = "3.3.5"
xgboost = "^2.1.3"
scikit-learn = "~1.5.2"
seaborn = "^0.13.2"
pymorphy2 = "^0.9.1"
rank-bm25 = "^0.2.2"
transformers = "^4.47.1"
joblib = "1.3.2"
sentence-transformers = "^3.3.1"
python-dotenv = "^1.0.1"
langchain = "^0.3.14"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
litellm = "^1.57.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
